--- a/demo/index.html
+++ b/demo/index.html
@@ -6,8 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/vue-hslider.js"></script>
+    <script src="../dist/vue-hslider.js"></script>
     <!--<script src="/dist/VueHslider.js"></script>-->
-
   </body>
 </html>
